--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --player-min-height: 600px
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -49,6 +53,7 @@ nav {
     margin: 0;
     padding: 0;
 }
+
 main {
     display: flex;
 }
@@ -62,13 +67,15 @@ main {
     background-color: aqua;
     margin: 8px 8px 0px;
     flex: 2.2;
+    min-height: var(--player-min-height);
+
 }
 
 .player {
     padding: 0;
     margin: 0;
-    width: calc((16/9) * 500px );
-    height: 500px;
+    width: calc((16/9) * var(--player-min-height));
+    height: var(--player-min-height);
 }
 
 .sidebar {
@@ -79,15 +86,9 @@ main {
     max-width: 400px;
     margin: 8px;
     margin-left: 0;
-}
-
-.sidebar ul {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    margin: 0;
-    padding: 0;
+    flex-direction: column;
 }
 
 .sidebar li {
