--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@
     box-sizing: border-box;
 }
 
-
-
 nav {
     display: flex;
     align-items: center;
@@ -20,6 +18,7 @@ nav {
     display: flex;
     align-items: center;
     margin: 8px;
+    min-width: 120px;
     width: 120px;
 }
 
@@ -37,6 +36,8 @@ nav {
 
 .search-box {
     margin: 0 auto;
+    display: flex;
+    gap: 4px;
 }
 
 #search-input {
